# rars_mod

./: .gitignore  Makefile.in  README  aclocal.m4  build.sh  configure  how-to-build.txt  how_to_build.txt  mass_test.sh  prepare_build.sh
CVS/: Entries  Repository
admin/CVS/: Entries  Repository
doc/: Makefile
doc/CVS/: Entries  Repository
doc/en/: Makefile
doc/en/CVS/: Entries  Repository
po/CVS/: Entries  Repository
rars/: args.cpp  car.h  carz.cpp  driver_old.cpp  drivers.cpp  globals.h  main.cpp  misc.cpp  misc.h  movie.h  race_manager.cpp  race_manager.h  report.h  track.cpp
rars/3ds/CVS/: Entries  Repository
rars/CVS/: Entries  Repository
rars/bitmap/CVS/: Entries  Repository
rars/djgpp/CVS/: Entries  Repository
rars/doc/CVS/: Entries  Repository
rars/graphics/: g_main.cpp  g_main.h  g_track3d.h
rars/robots/: apex1.cpp  apex84.cpp  bug.cpp  bulle.cpp  bulle2.cpp  bulle2.old  burns.cpp  dgn.cpp  djoefe.cpp  djoefe.opt  dodger1.cpp  dodger13.cpp  dodger5.cpp  dodger6.cpp  douge1.cpp  eagle03.cpp  felix16.cpp  gryma1.cpp  grymb1.cpp  gumby01b.cpp  h1.cpp  h2.cpp  human.cpp  indretti.cpp  jammer.cpp  jas.cpp  jocosa83.cpp  jpp.cpp  k1999v11.cpp  k1999v12.cpp  lisa15.cpp  mafanja.cpp  magic.cpp  mat1.cpp  o1.cpp  oscar1.cpp  oscarstr.cpp  osccar2.cpp  pokey02b.cpp  rach221b.cpp  (+18 more)
rars/robots/bulle/: Makefile.am  Makefile.in  _bulle.h  _opti.cpp  _opti.h  bulle.old  bulle.old2  dlgbulle.cpp  dlgbulle.h  kde_bulle.ui  kde_bulle_impl.cpp  kde_bulle_impl.h  test_track.txt
rars/robots/bulle/CVS/: Entries  Repository
rars/unix/: gi.cpp
(+66 files in other folders)
