####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libbulle.a

INCLUDES = $(all_includes)

libbulle_a_METASOURCES = AUTO

libbulle_a_SOURCES = kde_bulle_impl.cpp kde_bulle.cpp kde_bulle.ui _opti.cpp 


EXTRA_DIST = _opti.cpp _opti.h _bulle.h kde_bulle.ui kde_bulle.cpp kde_bulle.h kde_bulle_impl.cpp kde_bulle_impl.h 

####### kdevelop will overwrite this part!!! (end)############
